# aplpy

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES  CHANGES.md  CHANGES.rst  CITATION  INSTALL  INSTALL.rst  INSTALL.txt  LICENSE  LICENSE.md  MANIFEST.in  README  README.md  README.rst  README.txt  TODO  appveyor.yml  azure-pipelines.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: main.yml  update-changelog.yml
aplpy/: __init__.py  _astropy_init.py  anchored_artists.py  angle_util.py  apl_contour.py  apl_coords.py  apl_ds9_util.py  apl_grid.py  apl_header.py  apl_ticks.py  apl_util.py  aplpy.py  axis_labels.py  colorbar.py  compat.py  conftest.py  contour_util.py  convolve_util.py  coords.py  core.py  decorator.py  decorators.py  degConvert.py  deprecated.py  ds9.py  ds9_util.py  frame.py  grid.py  header.py  helpers.py  image_util.py  labels.py  layers.py  logger.py  math_util.py  montage.py  normalize.py  overlays.py  regionclasses.py  regions.py  (+11 more)
aplpy/pyregion/: LICENSE  __init__.py  ds9_attr_parser.py  ds9_region_parser.py  kapteyn_celestial.py  mpl_helper.py  parser_helper.py  physical_coordinate.py  region_numbers.py  region_to_filter.py  wcs_helper.py
aplpy/tests/: __init__.py  helpers.py  setup_package.py  test_axis_labels.py  test_beam.py  test_colorbar.py  test_compass.py  test_contour.py  test_convolve.py  test_downsample.py  test_frame.py  test_grid.py  test_images.py  test_init_cube.py  test_init_image.py  test_layers.py  test_misc.py  test_pixworld.py  test_pixworldmarkers.py  test_rgb.py  test_save.py  test_scalebar.py  test_sliders.py  test_subplot.py  test_tick_labels.py  test_ticks.py  test_vectors.py  test_wcs_util.py
aplpy/tests/data/: shapes.reg
aplpy/tests/data/2d_fits/: 1904-66_CEA.hdr  1904-66_COE.hdr  1904-66_CSC.hdr  1904-66_HPX.hdr  1904-66_PCO.hdr  1904-66_QSC.hdr  1904-66_SIN.hdr  1904-66_STG.hdr  2MASS_k.hdr  2MASS_k_rot.hdr
aplpy/tests/data/3d_fits/: cube.hdr
aplpy/tests/figures/: helpers.py  py312-test-image-mpl380.json  py312-test-image-mpldev.json
data/2d_fits/: 1904-66_AZP.hdr  1904-66_PAR.hdr  1904-66_SFL.hdr
docs/: api.rst  arbitrary_coordinate_systems.rst  conf.py  howto_avm.rst  howto_montage.rst  howto_rgb.rst  howto_subplot.rst  howtos.rst  index.rst  index.txt  installing.rst  normalize.rst  quick_reference.rst  quickstart.rst  rgb.rst  rtd-pip-requirements  slicing.rst
docs/fitsfigure/: arbitrary_coordinate_systems.rst  howto_avm.rst  howto_montage.rst  howto_noninteractive.rst  howto_subplot.rst  index.rst  quick_reference.rst  quickstart.rst  slicing.rst
tests/: test_axis_labels.py  test_beam.py  test_colorbar.py  test_contour.py  test_downsample.py  test_frame.py  test_grid.py  test_init_cube.py  test_init_image.py  test_scalebar.py  test_tick_labels.py  test_ticks.py
tests/data/: cube.hdr
tests/data/2d_fits/: 1904-66_AIR.hdr  1904-66_AIT.hdr  1904-66_ARC.hdr  1904-66_AZP.hdr  1904-66_BON.hdr  1904-66_CAR.hdr  1904-66_CEA.hdr  1904-66_COD.hdr  1904-66_COE.hdr  1904-66_COO.hdr  1904-66_COP.hdr  1904-66_CSC.hdr  1904-66_CYP.hdr  1904-66_HPX.hdr  1904-66_MER.hdr  1904-66_MOL.hdr  1904-66_NCP.hdr  1904-66_PAR.hdr  1904-66_PCO.hdr  1904-66_QSC.hdr  1904-66_SFL.hdr  1904-66_SIN.hdr  1904-66_STG.hdr  1904-66_SZP.hdr  1904-66_TAN.hdr  1904-66_TSC.hdr  1904-66_ZEA.hdr  1904-66_ZPN.hdr
