[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = aplpy
description = The Astronomical Plotting Library in Python
long_description =
author = Thomas Robitaille and Eli Bressert
author_email = thomas.robitaille@gmail.com, elibre@users.sourceforge.net
license = MIT
url = http://aplpy.github.io
edit_on_github = False
github_project = aplpy/aplpy
install_requires = numpy, astropy, matplotlib>=2.0, reproject>=0.4
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev
