[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = aplpy
description = The Astronomical Plotting Library in Python
long_description = The Astronomical Plotting Library in Python
author = Thomas Robitaille and Eli Bressert
author_email = thomas.robitaille@gmail.com, elibre@users.sourceforge.net
license = MIT
url = http://aplpy.github.io
edit_on_github = False
github_project = aplpy/aplpy
install_requires = numpy, astropy>=3.1, matplotlib>=2.0, reproject>=0.4
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 2.0rc2

[options.extras_require]
docs = sphinx-astropy
test = pytest-astropy; codecov; pytest-mpl
all = pyregion>=2.0; pillow>=4.0; pyavm>=0.9.4; scikit-image>=0.14
