[metadata]
name = aplpy
author = Thomas Robitaille and Eli Bressert
author_email = thomas.robitaille@gmail.com
license = MIT
license_file = LICENSE.md
url = http://aplpy.github.io
description = The Astronomical Plotting Library in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = APLpy/aplpy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy>=3.1
    matplotlib>=2.0
    reproject>=0.4
    pyregion>=2.0
    pillow>=4.0
    pyavm>=0.9.4
    scikit-image>=0.14
    shapely>=1.6


[options.extras_require]
test =
    pytest-astropy
    pytest-mpl
docs =
    sphinx-astropy

[options.package_data]
aplpy = *.reg, *.hdr

[tool:pytest]
testpaths = "aplpy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    aplpy/_astropy_init*
    aplpy/conftest.py
    aplpy/*setup_package*
    aplpy/tests/*
    aplpy/*/tests/*
    aplpy/extern/*
    aplpy/version*
    */aplpy/_astropy_init*
    */aplpy/conftest.py
    */aplpy/*setup_package*
    */aplpy/tests/*
    */aplpy/*/tests/*
    */aplpy/extern/*
    */aplpy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
